altri bug-fix..